# MunicSimulator

./: .env  .gitignore  Cargo.toml  README.md  test.rs  tracks.json  tracks.json.json
migrations/2023-03-09-100443_presences/: down.sql  up.sql
src/: logging_config.yaml  main.rs  schema.rs
src/models/: mod.rs  presences.rs  tracks.rs
src/services/: dir.json  mod.rs  unit_test.rs  utils.rs
src/templates/: posts.html.twig
static/: display_script.js  scripts.js  style.css
templates/: index.html.hbs  index.html.tera  ping.js
uploads/: presence.json  refrence.json  tracks.json  trip_1_2023-04-26.json
