#Cargo.toml
[package]
name = "munic_simulator"
authors = ["oussema.makni@munic.io"]
version = "1.0.0"
description = "A Notification Server for Simulating/replay Munic generic/OBD data."
readme = "README.md"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features=["json"]}
dotenvy = "0.15"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.1"
chrono = "^0.4"
google_maps = "3.1"
tokio = {version = "1.26.0", features = ["full"] }
winping = "0.10.1"
dns-lookup = "1.0.8"
url = "2.3.1"
mongodb = "2.4.0"
bson = { version = "2", features = ["chrono-0_4"] }
reqwest = { version = "0.11", features = ["blocking","json"] }
futures = "0.3.27"
polyline = "0.10.0"
substring = "1.4.5"
tokio-stream = "0.1.12"
rust_socketio = "0.4.1"
is_empty = "0.2.0"
rocket-multipart-form-data = "0.10.5"
multipart = "0.17.0"
atomic-array = "0.3"
once_cell = "1.17.1"
geo = "0.24.1"
rust_decimal = "1.29.1"
num-traits = "0.2.15"
byteorder = "1.4.3"
base64 = "0.13.0"
regex = "1.8.1"
serde_urlencoded = "0.7"


[dependencies.rocket_dyn_templates]
features = ["tera"]

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]