#Cargo.toml
[package]
name = "munic_simulator"
authors = ["oussema.makni@munic.io"]
version = "1.1.2"
description = "A Notification Server for Simulating/replay Munic generic/OBD data."
readme = "README.md"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features=["json"]}
dotenvy = "0.15"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
chrono = "^0.4"
google_maps = "3.1"
tokio = {version = "1.26.0", features = ["full"] }
winping = "0.10.1"
dns-lookup = "1.0.8"
url = "2.3.1"
mongodb = "2.4.0"
bson = { version = "2", features = ["chrono-0_4"] }
reqwest = { version = "0.11", features = ["blocking","json"] }
futures = "0.3.27"
polyline = "0.10.0"
tokio-stream = "0.1.12"
is_empty = "0.2.0"
rocket-multipart-form-data = "0.10.5"
atomic-array = "0.3"
once_cell = "1.17.1"
geo = "0.24.1"
rust_decimal = "1.29.1"
num-traits = "0.2.15"
byteorder = "1.4.3"
base64 = "0.13.0"
serde_urlencoded = "0.7"
lazy_static = "1.4.0"
humantime = "2.1"
rand = "0.8.5"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.3"
features = ["tera"]